--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Harry S
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Cobblestone Bridge
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwi32_3QmsLbAhUMuxQKHbJ6CrYQjRx6BAgBEAU&url=http%3A%2F%2Frbemis.com%2Forange%2Findex.html&psig=AOvVaw2o8X7Xc8lLLWXVLBxLikm9&ust=1528483425975539
 
 #
 # Flags below are optional
