--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Harry S
 description: Cobblestone Bridge
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwi32_3QmsLbAhUMuxQKHbJ6CrYQjRx6BAgBEAU&url=http%3A%2F%2Frbemis.com%2Forange%2Findex.html&psig=AOvVaw2o8X7Xc8lLLWXVLBxLikm9&ust=1528483425975539
+avatar: https://d3nevzfk7ii3be.cloudfront.net/igi/KRLMkuaBjm5mKDDP
 
 #
 # Flags below are optional
