--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Harry S
 description: Cobblestone Bridge
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: ("https://github.com/NorfolkTerrier/NorfolkTerrier.github.io/blob/master/images/avatar.png")
+avatar: https://github.com/NorfolkTerrier/NorfolkTerrier.github.io/blob/master/images/avatar.png
 
 #
 # Flags below are optional
